corrected filter alignment for Mobile view

--- a/Front End Assets/scss/modules/_gallery.scss
+++ b/Front End Assets/scss/modules/_gallery.scss
@@ -24,6 +24,7 @@
                 @media #{$media-mobile-view} {
                     display: block;
                     margin-top: $v-spacing-xs;
+                    text-align: center; 
                 }
 
                 @media #{$media-desktop-view} {
